--- a/calender-master/cal/templates/cal/confirm.html
+++ b/calender-master/cal/templates/cal/confirm.html
@@ -1,9 +1,13 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
-<h1> client name: {{instance.Meeting_ClientName}}</h1>
+<h4> client name: {{instance.Meeting_ClientName}}</h4>
 
 
-<h1> Link: {{instance.Meeting_Link}}</h1>
-<h1> Purpose: {{instance.event_id}}</h1>
+<h4> Link: {{instance.Meeting_Link}}</h4>
+<h4> Purpose: {{instance.Purpose_Of_Meeting}}</h4>
 
 <script type="text/javascript">
   var id = {{instance.event_id}}
