--- a/calender-master/cal/templates/cal/event.html
+++ b/calender-master/cal/templates/cal/event.html
@@ -29,7 +29,7 @@ Event
   {% csrf_token %}
   <table class="form form-table">
     {{ form }}
-    <tr><td colspan="2"><button type="submit" name="send_email" class="btn btn-info right" value="Send Email"> Send Email </button></td></tr>
+    <tr><td colspan="2"><button type="submit" name="send_email" class="btn btn-info right" value="Send Email"> Add Event </button></td></tr>
   </table>
 </form>
 {% endblock %}
